2016-03-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCpeeph.c (labelIsUncondJump): also search backwards
	* src/mcs51/peeph.def: added rules 257.a-i for jump-to-jump optimization,
	  added	rules 259.c-f to remove dead jumps, implements RFE 491
	* src/SDCCerr.c,
	* src/SDCCerr.h: changed W_UNKNOWN_FEXT to E_UNKNOWN_FEXT
	* src/SDCCmain.c (processFile): also accept .h sources, implement RFE 460

2016-03-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Rollback to previous version.
	* support/regression/tests/bug-2477.c
	  Disable this test case.

2016-03-11 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/gen.c
	  Fix a bug in genRet(): long long return value is cut to long.
	* support/regression/tests/bug-2477.c
	  Add a new test case.

2016-03-10 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/stm8/gen.c
	  Fix a bug in genAnd(): conflict register assignment.
	* support/regression/tests/bug-2480.c
	  Add a new test case.

2016-03-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y: MSVC does not accept declarations in for loop

2016-03-05 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/non-free/lib/pic16/missing: copied from device/lib/pic16/missing
	* src/SDCCgen.c (genInline): also check for colon in single literal char
	* support/cpp/libcpp/macro.c (create_iso_definition): fixed warning
	* support/regression/compact-results.py: use 'T' for clock ticks

2016-03-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCgen.c
	  Fix a bug: colon should not be treated as a label suffix in a literal
	  string in inline-asm.

2016-03-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCval.c
	  Remove warning #212 W_LONGLONG_LITERAL.

2016-03-04 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	  Fix long long issues.
	* support/regression/tests/longlong.c
	  Add more tests.

2016-02-27 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/scripts/sdcc.nsi